lang/tests/compile_fail/grouped_arg_borrowed_missing_max.stderr
error: QuasarSerialize: reference field `name` requires `#[max(N)]`
 --> tests/compile_fail/grouped_arg_borrowed_missing_max.rs:9:15
  |
9 |     pub name: &'a str,
  |               ^^^^^^^
